# lung_cancer_detector

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: README.md  app.py  config.py  inference.py  upload_weights.py
data_prep/: chest_xray_eda.ipynb  compile_annotated_images.py  get_data_from_XML.py  train_test_split.ipynb  yolo_directory_checks.py
model/: opt.yaml
runs/exp7/: events.out.tfevents.1663717528.ip-172-31-37-116.3645.0  results.csv
scripts/: compile_annotated_images.py  draw_box.py  train_test_split.ipynb
